[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am meet and i'a become a it professional
+            Hi there this is Meet and you are seeing one of the best IT professional
             .
         </div>
         <script type="text/javascript" src="/ui/main.js">
